Bug 875794 - get text at offset for line_start boundary fails on last empty line, r=tbsaunde